# Orpheus-TTS

additional_inference_options/watermark_audio/: watermark.py  watermark_sample.py
finetune/: lora.py  train.py
orpheus_tts_pypi/: pyproject.toml
orpheus_tts_pypi/orpheus_tts/: decoder.py  engine_class.py
pretrain/: config.yaml  train.py
