[build-system]
requires = [
    "setuptools>=61",  # Modern metadata support (PEP 621)
    "wheel>=0.38",
    "torch",           # Optional: ensures torch is present during build
    "torch_xla[tpu]",  # Optional: ensures torch-xla is available for TPU-specific installs
]
build-backend = "setuptools.build_meta"